Revisi file index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<div class="sidebar">
 				<h3>Tentang Penulis</h3>
 				<img src="img/keluarga09_Crop_Thumb.png" alt="harto">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, distinctio aut itaque natus temporibus harum consequuntur sint amet officia voluptatibus.</p>
+				<p>I am an old man, but never stop learning. Hobby coding.</p>
 			</div>
 		</div>	
 		<div class="footer">
