--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Depot Mie 52</title>
-	<link rel="stylesheet" href="style.css">				
+	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 	<div class="container">
 		<div class="header">
@@ -22,29 +24,31 @@
 				<h2>Home Made Noodle</h2>
 				<p class="penulis">ditulis oleh <a href="#">Harto Sudianto</a>.pada 18 Oktober 2019.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore		
+					tempor incididunt ut labore
 				</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et 
+					tempor incididunt ut labore et
 				</p>
 			</div>
 			<div class="sidebar">
 				<h3>Tentang Penulis</h3>
 				<img src="img/keluarga09_Crop_Thumb.png" alt="harto">
+				<p>Harto Lie Sudianto</p>
+				<p>asenlie528.github.io</p>
 				<p>I am an old man, but never stop learning. Hobby coding.</p>
 			</div>
-		</div>	
+		</div>
 		<div class="footer">
 			<p class="copy">Copyright 2019.hartosudianto</p>
 		</div>
 	</div>
-	
+
 </body>
 
 </html>
