--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 			<div class="sidebar">
 				<h3>Tentang Penulis</h3>
 				<img src="img/keluarga09_Crop_Thumb.png" alt="harto">
-				<p>Harto Lie Sudianto</p>
-				<p>asenlie528.github.io</p>
-				<p>I am an old man, but never stop learning. Hobby coding.</p>
+				<p>Harto Lie Sudianto
+					asenlie528.github.io
+					I am an old man, but never stop learning. Hobby coding.</p>
 			</div>
 		</div>
 		<div class="footer">
