Tambah SubJudul & revisi page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<div class="container">
 		<div class="header">
 			<h1 class="judul">Depot Mie 52</h1>
+			<h2 class="subjudul">Jl. Belibis Timika Papua</h2>
 			<ul>
 				<li><a href="#">home</a></li>
 				<li><a href="#">about</a></li>
@@ -22,19 +23,16 @@
 		<div class="content cf">
 			<div class="main">
 				<h2>Home Made Noodle</h2>
-				<p class="penulis">ditulis oleh <a href="#">Harto Sudianto</a>.pada 18 Oktober 2019.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore
-				</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et
-				</p>
+				<p class="penulis">ditulis oleh <a href="#">Harto Sudianto</a> , pada 18 Oktober 2019.</p>
+				<p>Mie dibuat secara tradisional. Tanpa bahan pengawet dan tidak pakai pewarna. Proses pembuatan mie
+					memakan waktu relatif lama. Butuh waktu antara 2 - 3 jam. </p>
+				<p>Kami sangat memperhatikan kebersihan dan higienitas. Kebersihan tempat kerja; baik dapur ( tempat
+					cuci piring ), tempat membuat mie, meja makan, kamar mandi. Kami juga menyediakan tempat cuci tangan
+					( wastafel ) bagi pelanggan kami. Lingkungan sanitasi juga kami perhatikan. Kami menyiapkan tempat
+					sampah basah dan kering. Ada alat penangkap lemak ( grease trap ). Surat ijin Sanitasi dari Dinas
+					Kesehatan dan Sertifikat Higiene dari Lembaga terkait juga kami miliki. </p>
+				<p>Kami juga memperhatikan pelayanan ( servis ) kepada pelanggan kami. Semua saran dan kritik membangun
+					kami perhatikan untuk meningkatkan pelayanan kami. Kami juga memiliki Sertifikat Halal dari MUI.</p>
 			</div>
 			<div class="sidebar">
 				<h3>Tentang Penulis</h3>
