--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
 			<div class="sidebar">
 				<h3>Tentang Penulis</h3>
 				<img src="img/keluarga09_Crop_Thumb.png" alt="harto">
-				<p>Harto Lie Sudianto
-					asenlie528.github.io
-					I am an old man, but never stop learning. Hobby coding.</p>
+				<p>Harto Lie Sudianto</p>
+				<p>email : asens_b8@yahoo.com</p>
+				<p>website : http://asen-servant.blogspot.com/</p>
+				<p>github pages : asenlie528.github.io</p>
+				<p>I am an old man, but never stop learning. Hobby coding.</p>
 			</div>
 		</div>
 		<div class="footer">
